n26/force-app/main/default/objects/Product2/fields/Currencies_Fees__c.field-meta.xml
<CustomField>
    <fullName>Currencies_Fees__c</fullName>
    <description>ATM Fee in Other Currencies</description>
    <label>Fee in Other Currencies</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>