n26/force-app/main/default/objects/Product2/fields/Monthly_cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_cost__c</fullName>
    <description>Monthly cost of the product</description>
    <label>Monthly cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>